# fizzbuzz-evolution

./: .compress.config.json  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  project.yml  pyproject.toml
.githooks/: config.yml
.github/workflows/: checks.yml
configs/: fizzbuzz.yml
docs/: 01-classic.md  02-literal.md  03-middle.md  04-senior.md  05-enterprise-domain-application.md  06-enterprise-infrastructure-presentation.md  07-completion.md  comparison.md  installation.md
docs/adr/: 0001-iterative-evolution.md  0002-rule-engine.md  0003-ports-and-adapters.md  0004-yaml-configuration.md  0005-english-language-policy.md
src/fizzbuzz_evolution/: __init__.py
src/fizzbuzz_evolution/classic/: __init__.py  __main__.py  fizzbuzz.py
src/fizzbuzz_evolution/enterprise/: __init__.py  __main__.py  bootstrap.py  presets.py
src/fizzbuzz_evolution/enterprise/application/: __init__.py  commands.py  ports.py  results.py  use_cases.py
src/fizzbuzz_evolution/enterprise/domain/: __init__.py  errors.py  models.py  rules.py  services.py
src/fizzbuzz_evolution/enterprise/infrastructure/: __init__.py
src/fizzbuzz_evolution/enterprise/infrastructure/config/: __init__.py  errors.py  loader.py  models.py  yaml_loader.py
src/fizzbuzz_evolution/enterprise/infrastructure/logging/: __init__.py  configuration.py
src/fizzbuzz_evolution/enterprise/infrastructure/rules/: __init__.py  configured_provider.py
src/fizzbuzz_evolution/enterprise/presentation/: __init__.py  cli.py  errors.py
src/fizzbuzz_evolution/enterprise/presentation/presenters/: __init__.py  factory.py  json_presenter.py  protocol.py  text_presenter.py
src/fizzbuzz_evolution/literal/: __init__.py  __main__.py  fizzbuzz.py
src/fizzbuzz_evolution/middle/: __init__.py  __main__.py  cli.py  errors.py  evaluator.py  generator.py
src/fizzbuzz_evolution/senior/: __init__.py  __main__.py  cli.py  engine.py  errors.py  generator.py  presets.py
src/fizzbuzz_evolution/senior/rules/: __init__.py  divisibility.py  protocol.py
tests/: test_cli.py  test_language_policy.py  test_package.py  test_release_metadata.py  test_stage_contract.py
tests/classic/: test_fizzbuzz.py
tests/enterprise/: __init__.py
tests/enterprise/acceptance/: test_enterprise_module.py
tests/enterprise/application/: __init__.py  test_generate_sequence.py
tests/enterprise/domain/: __init__.py  test_divisibility_rule.py  test_evaluation_service.py  test_number_range.py  test_rule_id.py
tests/enterprise/infrastructure/config/: test_yaml_loader.py
tests/enterprise/infrastructure/rules/: test_configured_provider.py
tests/enterprise/integration/: test_yaml_pipeline.py
tests/enterprise/presentation/: test_cli.py
tests/enterprise/presentation/presenters/: test_presenters.py
tests/literal/: test_fizzbuzz.py
tests/middle/: test_cli.py  test_errors.py  test_evaluator.py  test_generator.py
tests/senior/: __init__.py  test_cli.py  test_divisibility_rule.py  test_engine.py  test_generator.py  test_presets.py  test_rule_extensions.py
