[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fizzbuzz-evolution"
version = "0.2.1"
description = "One problem. Five stages of engineering evolution."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "FizzBuzz Evolution contributors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=fizzbuzz_evolution",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=0",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["fizzbuzz_evolution"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = [
    ".git",
    ".githooks",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["fizzbuzz_evolution"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
show_error_codes = true
pretty = true
warn_unreachable = true
warn_unused_configs = true
warn_return_any = true
exclude = [
    "^tests/",
    "^build/",
    "^dist/",
]
